[gd_scene load_steps=7 format=3 uid="uid://dfi3aa0asnuis"]

[ext_resource type="Script" path="res://PlayerCharacter/Player.gd" id="1_xgj18"]
[ext_resource type="Texture2D" uid="uid://bia8g5wi6x8n5" path="res://PlayerCharacter/MelSpirit.png" id="2_wr5yu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_70tj8"]
radius = 7.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dru1k"]
radius = 16.0
height = 40.0

[sub_resource type="Animation" id="Animation_fmv4m"]
resource_name = "AttackRight"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6lii"]
_data = {
"AttackRight": SubResource("Animation_fmv4m")
}

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 3
script = ExtResource("1_xgj18")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(1.625, 1.5)
texture = ExtResource("2_wr5yu")
vframes = 2

[node name="CollisionLegs" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_70tj8")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 448
limit_bottom = 288
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-1, -11)
shape = SubResource("CapsuleShape2D_dru1k")

[node name="attack_cool_down_timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6lii")
}

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cool_down_timer" to="." method="_on_attack_cool_down_timer_timeout"]
